--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
     <script src="scripts/input.js" defer></script>
     <script src="scripts/movement.js" defer></script>
     <script src="scripts/actors.js" defer></script>
+    <script src="scripts/player.js" defer></script>
     <script src="scripts/particles.js" defer></script>
     <script src="scripts/ui.js" defer></script>
+    <script src="scripts/game.js" defer></script>
     <script src="scripts/main.js" defer></script>
 </head>
 <body>
     <div id="game">
         <canvas id="viewport" width="640" height="360"></canvas>
     </div>
+    <p id="speed"></p>
+    <!-- LOAD ASSETS -->
+    <script src="assets/PlayerShip01.js"></script>
 </body>
 </html>
