adds PShot class and player shooting mechanics

--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
     <p id="speed"></p>
     <!-- LOAD ASSETS -->
     <script src="assets/PlayerShip01.js"></script>
+    <script src="assets/PlayerShot.js"></script>
 </body>
 </html>
