adds collision detection for PShot and MoonRocks

--- a/index.html
+++ b/index.html
@@ -23,5 +23,14 @@
     <!-- LOAD ASSETS -->
     <script src="assets/PlayerShip01.js"></script>
     <script src="assets/PlayerShot.js"></script>
+    <script src="assets/MoonRock01.js"></script>
+    <script src="assets/MoonRock02.js"></script>
+    <script src="assets/MoonRock03.js"></script>
+    <script src="assets/MoonRock04.js"></script>
+    <script src="assets/MoonRock05.js"></script>
+    <script src="assets/MoonRock06.js"></script>
+    <script src="assets/MoonRock07.js"></script>
+    <script src="assets/MoonRock08.js"></script>
+    <script src="assets/MoonRock09.js"></script>
 </body>
 </html>
