adds poly point and poly circ collision detection, adds player actor collision detection on player class, adds death logic to game class, adds level logic to game class, adds static spawn method to MoonRock class, adds fonts

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moon Rocks</title>
+    <link rel="stylesheet" href="style.css">
     <script src="scripts/palette.js"></script>
     <script src="scripts/view.js" defer></script>
     <script src="scripts/input.js" defer></script>
