--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
     <script src="assets/MoonRock07.js"></script>
     <script src="assets/MoonRock08.js"></script>
     <script src="assets/MoonRock09.js"></script>
+    <script src="assets/LifeIcon.js"></script>
 </body>
 </html>
