adds local scorekeeping

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="scripts/actors.js" defer></script>
     <script src="scripts/player.js" defer></script>
     <script src="scripts/particles.js" defer></script>
+    <script src="scripts/score.js" defer></script>
     <script src="scripts/ui.js" defer></script>
     <script src="scripts/game.js" defer></script>
     <script src="scripts/main.js" defer></script>
