adds UFO and UFOShot classes, adds coinToss() function to movement.js, adds Saucer, UFOProj, and Star sprites

--- a/index.html
+++ b/index.html
@@ -35,5 +35,8 @@
     <script src="assets/MoonRock08.js"></script>
     <script src="assets/MoonRock09.js"></script>
     <script src="assets/LifeIcon.js"></script>
+    <script src="assets/Saucer.js"></script>
+    <script src="assets/UFOShot.js"></script>
+    <script src="assets/Star.js"></script>
 </body>
 </html>
