adds touch interface icons

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="scripts/particles.js" defer></script>
     <script src="scripts/score.js" defer></script>
     <script src="scripts/ui.js" defer></script>
+    <script src="scripts/touch.js" defer></script>
     <script src="scripts/game.js" defer></script>
     <script src="scripts/main.js" defer></script>
 </head>
@@ -41,5 +42,10 @@
     <script src="assets/Saucer.js"></script>
     <script src="assets/UFOShot.js"></script>
     <script src="assets/Star.js"></script>
+    <script src="assets/touchGo.js"></script>
+    <script src="assets/touchLeft.js"></script>
+    <script src="assets/touchRight.js"></script>
+    <script src="assets/touchShoot.js"></script>
+    <script src="assets/touchStop.js"></script>
 </body>
 </html>
