disables html orientation prompt

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <script src="scripts/main.js" defer></script>
 </head>
 <body>
-    <div id="orientation-prompt" style="display:none">
+    <!-- <div id="orientation-prompt" style="display:none">
         <p>Please Rotate Your Device</p>
-    </div>
+    </div> -->
     <div id="game">
         <canvas id="viewport" width="640" height="360"></canvas>
     </div>
