adds orientation prompt and removes scaling from mobile devices

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Moon Rocks</title>
     <link rel="stylesheet" href="style.css">
     <script src="scripts/palette.js"></script>
@@ -19,13 +19,12 @@
     <script src="scripts/main.js" defer></script>
 </head>
 <body>
-    <!-- <div id="orientation-prompt" style="display:none">
+    <div id="orientation-prompt" style="display:none">
         <p>Please Rotate Your Device</p>
-    </div> -->
+    </div>
     <div id="game">
         <canvas id="viewport" width="640" height="360"></canvas>
     </div>
-    <p id="speed"></p>
     <!-- LOAD ASSETS -->
     <script src="assets/PlayerShip01.js"></script>
     <script src="assets/PlayerShot.js"></script>
