adds Gem sprites; adds particle effects to Player Ship, Moon Rocks, and UFO; adds masks to Player and UFO sprites

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <canvas id="viewport" width="640" height="360"></canvas>
     </div>
     <!-- LOAD ASSETS -->
+    <script src="assets/Gem01.js"></script>
+    <script src="assets/Gem02.js"></script>
+    <script src="assets/Gem03.js"></script>
     <script src="assets/PlayerShip01.js"></script>
     <script src="assets/PlayerShot.js"></script>
     <script src="assets/MoonRock01.js"></script>
