adds sound effects

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <canvas id="viewport" width="640" height="360"></canvas>
     </div>
     <!-- LOAD ASSETS -->
+    <!-- IMAGES -->
     <script src="assets/Gem01.js"></script>
     <script src="assets/Gem02.js"></script>
     <script src="assets/Gem03.js"></script>
@@ -49,5 +50,7 @@
     <script src="assets/touchRight.js"></script>
     <script src="assets/touchShoot.js"></script>
     <script src="assets/touchStop.js"></script>
+    <!-- AUDIO -->
+    <script src="scripts/sound.js"></script>
 </body>
 </html>
